17.nov (ws)
      - fixed bug in tuplet entry
      - fix another palette related crash
16.nov (ws)
      - added galician translation from Xosé
      - fix crash when saving palettes
      - optimize slur position for staccato/tenuto notes
      - "reset positions" now also resets slur editing
      - add action for "reset positions", shortcut Ctrl+R
      (sy)
      - add preferences options for replacing fractions and copyright symbol
      - copyright symbol is only replaced in copyright text
15.nov (ws)
      - added two new wallpapers from Toby Smithe
      - updated russian translation from Alexandre Prokoudine
      (sy)
      - some refactoring to remove duplicate code in cmdAddText, cmdAddChordName,
        cmdAddChordName2, cmdAddHairpin, addTempo, TextB::layout, Symbol::layout
      - made add hairpin keyboard command create hairpin extending to next note,
        not a half note long as before, also work with rests
      - toolbar button tooltips display shortcut in parentheses to help
        users discover shortcuts
14.nov (ws)
      - variable palette geometry
      - configurable application style
      (sy)
      - add fractions to text palette symbols
      - automatic conversion of simple fractions ("1/2", etc) and
        copyright symbol "(C)" into symbols in Text elements
        after hitting Space, Return, or Tab
13.nov (ws)
      - some progress for drum entry
      - lyric hyphens are now of constant len and much shorter
      (sy)
      - slurs going on the beam side are now aligned to the stem rather than
        the middle of the notehead
      - slurs on the stem side of stemmed notes start half of a staff space
        from the end of the stem
      - slurs spanning notes with mixed stem directions are always above
        (yesterday's change did not check intervening notes)
      - slurs between two tied notes go on the stem side by default, to avoid confusion